@@ -38,6 +38,20 @@
 <p>2016-05-21  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/url.c (ReadURLImage): Reading &quot;<a class="reference external" href="file://">file://</a>&quot; URLs was not
+working.  Now file URLs are working.</li>
+</ul>
+</blockquote>
+<p>2016-05-21  Glenn Randers-Pehrson  &lt;<a class="reference external" href="mailto:glennrp&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">glennrp<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/png.c: Respect JPEG limits (65535x65535) and user width
+and height limits from &quot;-limit&quot; while reading or writing JNG files.</li>
+</ul>
+</blockquote>
+<p>2016-05-21  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
 <li>coders/url.c: Don't hide HTTP, FTP, and FILE URL support from
 '-list format' output.  Ignore HTTP, FTP, and FILE as a useful
 file extension for determing the file format.</li>
