@@ -1,3 +1,8 @@
+2016-05-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/url.c (ReadURLImage): Reading "file://" URLs was not
+	working.  Now file URLs are working.
+
 2016-05-21  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>
 
 	* coders/png.c: Respect JPEG limits (65535x65535) and user width
